--- a/headerArea_playform/css/reset.css
+++ b/headerArea_playform/css/reset.css
@@ -4,7 +4,7 @@
   --color-gray-dark: #3c3b3b;
   --color-gray-bright: #a3a3a3;
   --color-red: #ff0000;
-
+  --color-blue-bright: #5fa7ff;
 }
 
 * {
